2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/03_decal_var_init.deca
// Description :
//      déclaration des variable avec initialisation  
// Resultats :
//    Valide 
//
// Historique :
// cree le 09/01/2024

{
    int a = 1 ; 

    float  f = 1.5 ;

    boolean b = true ;
    
}