2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/43_minus_float_float_bool.deca
// Description :
//      affécation de la soustraction entre float et int dans un boolean  
// Resultats :
//    Erreur Contexteulle : ligne 11 : le float ne peut pas être affecté à boolean
//
// Historique :
// cree le 10/01/2024

{
    boolean b ;
    b = 1-3.5 ;
}